--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&family=Staatliches&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/app.css">
-    <title>Meeti - </title>
+    <title>Meeti - <%- nombrePagina %></title>
 </head>
 <body>
     <header class="contenedor site-header">
